--- a/client/package.json
+++ b/client/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "nasa-fe",
-  "version": "1.0.1",
-  "private": true,
-  "dependencies": {
-    "arwes": "^1.0.0-alpha.5",
-    "fullstackproject": "file:..",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "^5.0.0"
-  },
-  "overrides": {
-    "nth-check@1.0.2": "2.0.1"
-  },
-  "proxy": "http://localhost:4000",
+  "name": "client",
+  "version": "1.0.0",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "BUILD_PATH=../server/public react-scripts build",
     "test": "react-scripts test --passWithNoTests",
     "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.14",
+    "arwes": "1.0.0-alpha.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^5.0.0"
   },
   "eslintConfig": {
     "extends": [
@@ -37,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:4000",
+  "author": "",
+  "license": "ISC"
 }
