--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,49 @@ jobs:
       
       - name: Build
         run: npm run build
-      
+  docker-image:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Git checkout
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Build Docker image
+        run: docker build -t subhamjaiswal79788/nasa-fe:${{ github.sha }} .
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Push Docker image
+        run: docker push subhamjaiswal79788/nasa-fe:${{ github.sha }}
+  ssh-to-ec2-and-deploy:
+    needs: deploy  
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up SSH key
+        uses: LuisEnMarroquin/setup-ssh-action@v2.0.0
+        with:
+        ORIGIN: ${{ secrets.HOST }}
+        SSHKEY: ${{ secrets.TEST }}
+        NAME: production
+        PORT:  ${{ secrets.PORT }}
+        USER: ubuntu
+        script: |
+          docker stop nasa-fe || true
+          docker rm nasa-fe || true
+
+          docker pull subhamjaiswal79788/nasa-fe:${{ github.sha }}
+
+          docker run -d --name nasa-fe -p  ${{ secrets.PORT }}: ${{ secrets.PORT }} subhamjaiswal79788/nasa-fe:${{ github.sha }}
+
       
