--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Push Docker image
         run: docker push subhamjaiswal79788/nasa-fe:${{ github.sha }}
   ssh-to-ec2-and-deploy:
-    needs: deploy  
+    needs: docker-image  
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
