--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,34 +1,44 @@
-name: NASA Client build
+name: NASA FE build
 
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
-
+      - master
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x, 18.x]
+        mongodb-version: ["4.4"]
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Git checkout
+        uses: actions/checkout@v3
 
-      - name: Install Node.js
-        uses: actions/setup-node@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: ${{ matrix.node-version }}
 
-      - name: Install dependencies
-        run: npm install
+      - name: Start MongoDB
+        uses: supercharge/mongodb-github-action@1.8.0
+        with:
+          mongodb-version: ${{ matrix.mongodb-version }}
 
-      - name: Build
-        run: npm run build
+      - run: npm install
 
+      - run: npm test
+        env:
+          CI: true
+          MONGODB_URI: mongodb://localhost/nasa
   docker-image:
     needs: build
     runs-on: ubuntu-latest
+
     steps:
       - name: Git checkout
         uses: actions/checkout@v3
@@ -47,26 +57,25 @@ jobs:
 
       - name: Push Docker image
         run: docker push subhamjaiswal79788/nasa-fe:${{ github.sha }}
-
   ssh-to-ec2-and-deploy:
-    needs: docker-image
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+        needs: docker-image  
+        runs-on: ubuntu-latest
+        steps:
+        - name: Checkout code
+          uses: actions/checkout@v2
 
-      - name: Set up SSH key
-        uses: LuisEnMarroquin/setup-ssh-action@v2.0.0
-        with:
-          ORIGIN: ${{ secrets.HOST }}
-          SSHKEY: ${{ secrets.TEST }}
-          NAME: production
-          PORT: ${{ secrets.PORT }}
-          USER: ubuntu
-        script: |
-          docker stop nasa-fe || true
-          docker rm nasa-fe || true
+        - name: Set up SSH key
+          uses: LuisEnMarroquin/setup-ssh-action@v2.0.0
+          with:
+            ORIGIN: ${{ secrets.HOST }}
+            SSHKEY: ${{ secrets.TEST }}
+            NAME: production
+            PORT:  ${{ secrets.PORT }}
+            USER: ubuntu
+            script: |
+              docker stop nasa-fe || true
+              docker rm nasa-fe || true
 
-          docker pull subhamjaiswal79788/nasa-fe:${{ github.sha }}
+              docker pull subhamjaiswal79788/nasa-fe:${{ github.sha }}
 
-          docker run -d --name nasa-fe -p ${{ secrets.PORT }}:${{ secrets.PORT }} subhamjaiswal79788/nasa-fe:${{ github.sha }}
+              docker run -d --name nasa-fe -p  ${{ secrets.PORT }}: ${{ secrets.PORT }} subhamjaiswal79788/nasa-fe:${{ github.sha }}
