--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,24 +58,25 @@ jobs:
       - name: Push Docker image
         run: docker push subhamjaiswal79788/nasa-fe:${{ github.sha }}
   ssh-to-ec2-and-deploy:
-        needs: docker-image  
-        runs-on: ubuntu-latest
-        steps:
-        - name: Checkout code
-          uses: actions/checkout@v2
+    needs: docker-image
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-        - name: Set up SSH key
-          uses: LuisEnMarroquin/setup-ssh-action@v2.0.0
-          with:
-            ORIGIN: ${{ secrets.HOST }}
-            SSHKEY: ${{ secrets.TEST }}
-            NAME: production
-            PORT:  ${{ secrets.PORT }}
-            USER: ubuntu
-            script: |
-              docker stop nasa-fe || true
-              docker rm nasa-fe || true
+      - name: Set up SSH key
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.TEST }}
 
-              docker pull subhamjaiswal79788/nasa-fe:${{ github.sha }}
-
-              docker run -d --name nasa-fe -p  ${{ secrets.PORT }}: ${{ secrets.PORT }} subhamjaiswal79788/nasa-fe:${{ github.sha }}
+      - name: SSH into EC2 instance
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ec2-user
+          key: ${{ secrets.TEST}}
+          script: |
+            docker stop nasa-be || true
+            docker rm nasa-be || true
+            docker pull subhamjaiswal79788/nasa-be:${{ github.sha }}
+            docker run --restart=always -d -p ${{ secrets.PORT }}:${{ secrets.PORT }} subhamjaiswal79788/nasa-be:${{ github.sha }}
